<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TMP006Example</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_scanning">Bluetooth Le Scan</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_state_power_off">센서 꺼져있음</string>
    <string name="action_state_power_on">센서 켜져있음</string>
    <string name="action_state_unknown">알 수 없음</string>
	<string name="scan_button">Bluetooth Le Scan</string>
	<string name="vobj_text_view">VOBJ 값</string>
	<string name="defualt_value">0x0000</string>
	<string name="tamb_text_view">TAMB 값</string>
	<string name="measure_text_view">측정 온도</string>
	<string name="default_measured_temperature">000.00000</string>
	<string name="get_measure_value">온도 측정 시작</string>
	<string name="scan_cancel">검색 취소</string>
	<string name="action_measure_start">측정 시작</string>
</resources>
