<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="blog.naver.com.tmp006example.TMP006Activity" >

    <item
        android:id="@+id/action_scan"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_scanning">
    </item>
    <item
        android:id="@+id/action_measurement"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_measure_start"
        android:visible="false">
    </item>

    <item
        android:id="@+id/action_power_state"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_state_unknown"
        android:visible="false">
    </item>
</menu>