<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="blog.naver.com.tmp006example.TMP006Activity" >

    <Button
        android:id="@+id/scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/scan_button" />

    <TextView
        android:id="@+id/view_vobj_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/scan_button"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:text="@string/vobj_text_view"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/value_vobj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/view_vobj_text"
        android:text="@string/defualt_value"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/view_tamb_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/view_vobj_text"
        android:layout_alignBottom="@id/view_vobj_text"
        android:layout_alignRight="@id/scan_button"
        android:text="@string/tamb_text_view"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/value_tamb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/value_vobj"
        android:layout_alignBottom="@id/value_vobj"
        android:layout_alignRight="@id/view_tamb_text"
        android:text="@string/defualt_value"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/view_measure_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/value_vobj"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:text="@string/measure_text_view"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/value_measurement_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_measure_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/default_measured_temperature"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
